--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/watasuke102/watasuke.net#readme",
   "workspaces": [
-    "main"
+    "main",
+    "config"
   ]
 }
