--- a/main/package.json
+++ b/main/package.json
@@ -11,7 +11,6 @@
     "serve": "gatsby serve -p 2999 -H 0.0.0.0"
   },
   "dependencies": {
-    "@watasuke.net/config": "^0.0.0",
     "@giscus/react": "^3.0.0",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.2.5",
@@ -24,6 +23,8 @@
     "@types/remove-markdown": "^0.3.4",
     "@vanilla-extract/css": "^1.14.2",
     "@vanilla-extract/webpack-plugin": "^2.3.7",
+    "@watasuke.net/common": "^0.0.0",
+    "@watasuke.net/config": "^0.0.0",
     "framer-motion": "^11.1.7",
     "gatsby": "^5.13.4",
     "gatsby-plugin-alias-imports": "^1.0.5",
