update: run prettier from the top

--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -5,17 +5,15 @@ arrowParens: 'avoid'
 trailingComma: 'all'
 jsxSingleQuote: true
 bracketSpacing: false
-
 plugins:
   - '@trivago/prettier-plugin-sort-imports'
 # importの種類ごとに改行を挟まない
 importOrderSeparation: false
 importOrderCaseInsensitive: false
 importOrder:
-  - '^@config'
   - '(.*)\.css$'
-  - '^@pages/(.*)'
   - '<THIRD_PARTY_MODULES>'
+  - '^@watasuke.net(.*)'
   - '^@common/(.*)'
   - '^@feature/(.*)'
   - '^@utils/(.*)'
