add: editor from cms.watasuke.net as a package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "eslint.workingDirectories": [
     "main",
-    "config"
+    "editor",
+    "config",
+    "common"
   ],
   "[toml]": {
     "editor.formatOnSave": false,
