add: cms>Git operation
implemented only the task which returns latest commit hash

--- a/cms/Cargo.toml
+++ b/cms/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 chrono = "0.4"
+git2 = "0.19"
 juniper = { version = "0.16", features = ["schema-language"] }
 juniper_rocket = "0.9"
 regex = "1.10"
