--- a/main/package.json
+++ b/main/package.json
@@ -42,6 +42,7 @@
     "react-transition-group": "^4.4.5",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.0",
     "remark-gfm": "^4.0.0",
     "remark-slug": "^7.0.1",
     "remark-toc": "^9.0.0",
