--- a/editor/package.json
+++ b/editor/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.3.1",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
+    "react-spinners": "^0.14.1",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
