update: editor>move Editor components to features/
`_components` directory is too deep to open

--- a/editor/tsconfig.json
+++ b/editor/tsconfig.json
@@ -8,6 +8,7 @@
     ],
     "baseUrl": "./",
     "paths": {
+      "@features/*": [ "./src/features/*" ],
       "@common/*": [ "./src/common/*" ],
       "@utils/*": [ "./src/utils/*" ],
       "@assets/*": [ "./src/assets/*" ],
