update: migrate to flat config

--- a/editor/package.json
+++ b/editor/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "new": "scaffdog generate",
-    "lint": "next lint --fix",
+    "lint": "eslint --fix .",
     "sb": "storybook dev -p 6006",
     "build-sb": "storybook build"
   },
@@ -59,12 +59,7 @@
     "@vanilla-extract/webpack-plugin": "^2.3.10",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
-    "eslint": "8.57.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-next": "14.2.4",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-unused-imports": "^3.2.0",
+    "eslint-plugin-header": "^3.1.1",
     "mini-css-extract-plugin": "^2.9.0",
     "scaffdog": "^4.0.0",
     "storybook": "^8.1.10",
