--- a/config/package.json
+++ b/config/package.json
@@ -5,5 +5,14 @@
   "main": ".eslintrc.js",
   "files": [
     "tsconfig.json"
-  ]
+  ],
+  "devDependencies": {
+    "@eslint/compat": "^1.1.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.7.0",
+    "@types/eslint": "^8.56.10",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.4",
+    "typescript-eslint": "^7.16.1"
+  }
 }
