--- a/config/package.json
+++ b/config/package.json
@@ -12,7 +12,9 @@
     "@eslint/js": "^9.7.0",
     "@types/eslint": "^8.56.10",
     "eslint": "^8.57.0",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "typescript-eslint": "^7.16.1"
   }
 }
