--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[https://watasuke.net](https://watasuke.net)で公開されているページ",
   "main": "index.js",
   "scripts": {
+    "lint": "npm -w main -w editor run lint",
     "fmt": "prettier --write main/src main/gatsby-config.ts main/gatsby-node.ts main/gatsby-ssr.tsx",
     "dev": "npm -w main run dev",
     "gen": "gql-gen --config graphql/codegen.ts"
@@ -22,7 +23,6 @@
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-graphql-request": "^6.2.0",
     "@graphql-codegen/typescript-operations": "^4.2.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "prettier": "^3.2.5"
   },
   "workspaces": [
