--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[https://watasuke.net](https://watasuke.net)で公開されているページ",
   "main": "index.js",
   "scripts": {
-    "lint": "npm -w main -w editor run lint",
+    "lint": "npm -w common -w main -w editor run lint",
     "fmt": "prettier --write main/src main/gatsby-config.ts main/gatsby-node.ts main/gatsby-ssr.tsx",
     "dev": "npm -w main run dev",
     "gen": "gql-gen --config graphql/codegen.ts"
