--- a/main/package.json
+++ b/main/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.1.7",
     "gatsby": "^5.13.4",
     "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-canonical-urls": "^5.13.1",
     "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
