--- a/common/package.json
+++ b/common/package.json
@@ -6,6 +6,7 @@
     "lint": "eslint --fix ."
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.1.0",
     "@vanilla-extract/css": "^1.15.3",
     "github-slugger": "^2.0.0",
     "hast-util-to-jsx-runtime": "^2.3.0",
