--- a/main/tsconfig.json
+++ b/main/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "extends": "@watasuke.net/config/tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "./",
     "paths": {
-      "@utils/*": [ "src/utils/*" ],
-      "@assets/*": [ "src/assets/*" ],
-      "@mytypes/*": [ "src/types/*" ],
-      "@pages/*": [ "src/components/pages/*" ],
-      "@common": [ "src/components/common" ],
-      "@feature/*": [ "src/components/feature/*" ],
+      "@utils/*": [ "./src/utils/*" ],
+      "@assets/*": [ "./src/assets/*" ],
+      "@data/*": [ "./src/data/*" ],
+      "@mytypes/*": [ "./src/types/*" ],
+      "@pages/*": [ "./src/components/pages/*" ],
+      "@common": [ "./src/components/common" ],
+      "@feature/*": [ "./src/components/feature/*" ],
     },
     "typeRoots": [
       "src/types"
