update: skills>sort by tier

--- a/main/tsconfig.json
+++ b/main/tsconfig.json
@@ -11,7 +11,7 @@
       "@feature/*": [ "./src/components/feature/*" ],
     },
     "typeRoots": [
-      "src/types"
+      "./src/types"
     ]
   },
   "include": [
