--- a/editor/package.json
+++ b/editor/package.json
@@ -12,11 +12,6 @@
     "build-sb": "storybook build"
   },
   "dependencies": {
-    "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-codegen/client-preset": "^4.3.0",
-    "@graphql-codegen/typescript": "^4.0.7",
-    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
-    "@graphql-codegen/typescript-operations": "^4.2.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -30,24 +25,17 @@
     "@watasuke.net/common": "^0.0.0",
     "@watasuke.net/config": "^0.0.0",
     "axios": "^1.7.2",
-    "framer-motion": "^11.2.11",
-    "gardevoir": "^1.0.0",
-    "highlight.js": "^11.9.0",
+    "graphql-request": "^7.1.0",
+    "graphql-tag": "^2.12.6",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-markdown": "^9.0.1",
     "react-spinners": "^0.14.1",
-    "rehype-highlight": "^7.0.0",
-    "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-slug": "^7.0.1",
     "typescript": "5.5.2",
     "use-immer": "^0.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
     "@storybook/addon-essentials": "^8.1.10",
     "@storybook/addon-interactions": "^8.1.10",
     "@storybook/addon-links": "^8.1.10",
@@ -57,12 +45,10 @@
     "@storybook/react": "^8.1.10",
     "@storybook/test": "^8.1.10",
     "@vanilla-extract/webpack-plugin": "^2.3.10",
-    "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "eslint-plugin-header": "^3.1.1",
     "mini-css-extract-plugin": "^2.9.0",
     "scaffdog": "^4.0.0",
-    "storybook": "^8.1.10",
-    "style-loader": "^4.0.0"
+    "storybook": "^8.1.10"
   }
 }
