--- a/main/package.json
+++ b/main/package.json
@@ -11,10 +11,7 @@
   },
   "dependencies": {
     "@giscus/react": "^3.0.0",
-    "@types/hast": "^3.0.4",
     "@types/react": "^18.2.79",
-    "@types/react-transition-group": "^4.4.10",
-    "@types/remove-markdown": "^0.3.4",
     "@vanilla-extract/css": "^1.14.2",
     "@vanilla-extract/webpack-plugin": "^2.3.7",
     "@watasuke.net/common": "^0.0.0",
@@ -33,24 +30,14 @@
     "gatsby-plugin-vanilla-extract": "^4.0.2",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
-    "github-slugger": "^2.0.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
-    "hast": "^1.0.0",
-    "hast-util-to-jsx-runtime": "^2.3.0",
-    "highlight.js": "^11.9.0",
     "ogp-parser": "^0.8.1",
     "react": "^18.2.0",
     "react-markdown": "^9.0.1",
-    "react-transition-group": "^4.4.5",
-    "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
-    "rehype-stringify": "^10.0.0",
     "remark-gfm": "^4.0.0",
-    "remark-slug": "^7.0.1",
-    "remove-markdown": "^0.5.0",
-    "typescript": "^5.4.5",
-    "unist-util-visit": "^5.0.0"
+    "typescript": "^5.4.5"
   },
   "overrides": {
     "gatsby-plugin-react-svg": {
