--- a/main/package.json
+++ b/main/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@giscus/react": "^3.0.0",
-    "@types/react": "^18.2.79",
-    "@vanilla-extract/css": "^1.14.2",
-    "@vanilla-extract/webpack-plugin": "^2.3.7",
+    "@types/react": "^18.3.3",
+    "@vanilla-extract/css": "^1.15.3",
+    "@vanilla-extract/webpack-plugin": "^2.3.11",
     "@watasuke.net/common": "^0.0.0",
     "@watasuke.net/config": "^0.0.0",
-    "framer-motion": "^11.1.7",
-    "gatsby": "^5.13.4",
+    "framer-motion": "^11.3.19",
+    "gatsby": "^5.13.7",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-canonical-urls": "^5.13.1",
     "gatsby-plugin-google-gtag": "^5.13.1",
@@ -30,14 +30,14 @@
     "gatsby-plugin-vanilla-extract": "^4.0.2",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
-    "graphql": "^16.8.1",
-    "graphql-request": "^6.1.0",
+    "graphql": "^16.9.0",
+    "graphql-request": "6.1.0",
     "ogp-parser": "^0.8.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-markdown": "^9.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.4"
   },
   "overrides": {
     "gatsby-plugin-react-svg": {
