--- a/common/package.json
+++ b/common/package.json
@@ -16,9 +16,11 @@
     "react": "^18.3.1",
     "react-markdown": "^9.0.1",
     "rehype-highlight": "^7.0.0",
+    "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
     "remark-slug": "^7.0.1",
