--- a/editor/package.json
+++ b/editor/package.json
@@ -19,37 +19,37 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-toast": "^1.2.2",
     "@svgr/webpack": "^8.1.0",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.0",
-    "@vanilla-extract/css": "^1.16.0",
-    "@vanilla-extract/next-plugin": "^2.4.6",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@vanilla-extract/css": "^1.16.1",
+    "@vanilla-extract/next-plugin": "^2.4.7",
     "@watasuke.net/common": "^0.0.0",
     "@watasuke.net/config": "^0.0.0",
-    "axios": "^1.7.7",
-    "graphql-request": "^7.1.0",
+    "axios": "^1.7.8",
+    "graphql-request": "6.1.0",
     "graphql-tag": "^2.12.6",
-    "next": "14.2.15",
+    "next": "15.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-dropzone": "^14.2.9",
+    "react-dropzone": "^14.3.5",
     "react-spinners": "^0.14.1",
-    "typescript": "5.6.3",
+    "typescript": "5.7.2",
     "use-immer": "^0.10.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.3.5",
-    "@storybook/addon-interactions": "^8.3.5",
-    "@storybook/addon-links": "^8.3.5",
-    "@storybook/addon-onboarding": "^8.3.5",
-    "@storybook/blocks": "^8.3.5",
-    "@storybook/nextjs": "^8.3.5",
-    "@storybook/react": "^8.3.5",
-    "@storybook/test": "^8.3.5",
-    "@vanilla-extract/webpack-plugin": "^2.3.14",
+    "@storybook/addon-essentials": "^8.4.5",
+    "@storybook/addon-interactions": "^8.4.5",
+    "@storybook/addon-links": "^8.4.5",
+    "@storybook/addon-onboarding": "^8.4.5",
+    "@storybook/blocks": "^8.4.5",
+    "@storybook/nextjs": "^8.4.5",
+    "@storybook/react": "^8.4.5",
+    "@storybook/test": "^8.4.5",
+    "@vanilla-extract/webpack-plugin": "^2.3.15",
     "css-loader": "^7.1.2",
     "eslint-plugin-header": "^3.1.1",
-    "mini-css-extract-plugin": "^2.9.1",
+    "mini-css-extract-plugin": "^2.9.2",
     "scaffdog": "^4.1.0",
-    "storybook": "^8.3.5"
+    "storybook": "^8.4.5"
   }
 }
