--- a/main/package.json
+++ b/main/package.json
@@ -37,6 +37,7 @@
     "react-markdown": "^9.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   },
   "overrides": {
