--- a/main/package.json
+++ b/main/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-plugin-typescript": "^5.14.0",
     "gatsby-plugin-vanilla-extract": "^4.0.2",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.32",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
     "graphql": "^16.9.0",
