--- a/main/package.json
+++ b/main/package.json
@@ -4,35 +4,24 @@
   "private": true,
   "scripts": {
     "lint": "eslint --fix .",
-    "build": "gatsby build",
-    "dev": "gatsby develop -p 10210 -H 0.0.0.0",
-    "serve": "gatsby serve -p 2999 -H 0.0.0.0",
+    "build": "next build",
+    "dev": "next dev -p 10210 -H 0.0.0.0",
+    "serve": "next start -p 2999 -H 0.0.0.0",
     "new": "scaffdog generate"
   },
   "dependencies": {
     "@giscus/react": "^3.0.0",
-    "@types/react": "^18.3.12",
+    "@svgr/webpack": "^8.1.0",
+    "@types/react": "^19.0.1",
     "@vanilla-extract/css": "^1.16.1",
+    "@vanilla-extract/next-plugin": "^2.4.7",
     "@vanilla-extract/webpack-plugin": "^2.3.15",
     "@watasuke.net/common": "^0.0.0",
     "@watasuke.net/config": "^0.0.0",
-    "framer-motion": "^11.12.0",
-    "gatsby": "^5.14.0",
-    "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-canonical-urls": "^5.14.0",
-    "gatsby-plugin-google-gtag": "^5.14.0",
-    "gatsby-plugin-image": "^3.14.0",
-    "gatsby-plugin-manifest": "^5.14.0",
-    "gatsby-plugin-react-svg": "^3.3.0",
-    "gatsby-plugin-sharp": "^5.14.0",
-    "gatsby-plugin-sitemap": "^6.14.0",
-    "gatsby-plugin-typescript": "^5.14.0",
-    "gatsby-plugin-vanilla-extract": "^4.0.2",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.32",
-    "gatsby-source-filesystem": "^5.14.0",
-    "gatsby-transformer-sharp": "^5.14.0",
+    "framer-motion": "^11.14.4",
     "graphql": "^16.9.0",
-    "graphql-request": "6.1.0",
+    "graphql-request": "7.1.2",
+    "next": "^15.1.0",
     "ogp-parser": "^0.8.1",
     "react": "^18.3.1",
     "react-markdown": "^9.0.1",
@@ -40,18 +29,6 @@
     "remark-gfm": "^4.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
-  },
-  "overrides": {
-    "gatsby-plugin-react-svg": {
-      "svg-react-loader": {
-        "loader-utils": "^1.4.2",
-        "json5": "^1.0.2",
-        "xml2js": "^0.5.0"
-      },
-      "ogp-parser": {
-        "fast-xml-parser": "^4.1.2"
-      }
-    }
   },
   "devDependencies": {
     "eslint-plugin-header": "^3.1.1",
