--- a/main/package.json
+++ b/main/package.json
@@ -21,8 +21,8 @@
     "graphql": "^16.9.0",
     "graphql-request": "7.1.2",
     "next": "^15.1.0",
-    "ogp-parser": "^0.8.1",
-    "react": "^18.3.1",
+    "open-graph-scraper": "^6.8.3",
+    "react": "^19.0.0",
     "react-markdown": "^9.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
