--- a/common/package.json
+++ b/common/package.json
@@ -18,12 +18,12 @@
     "rehype-highlight": "^7.0.1",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
-    "remark-slug": "^7.0.1",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0"
   }
