update: enable Static Export

--- a/main/package.json
+++ b/main/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint --fix .",
-    "build": "next build",
+    "build": "next build && bash html_to_index.sh",
     "dev": "next dev -p 10210 -H 0.0.0.0",
     "serve": "next start -p 2999 -H 0.0.0.0",
     "new": "scaffdog generate"
