--- a/main/package.json
+++ b/main/package.json
@@ -9,19 +9,20 @@
     "new": "scaffdog generate"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^15.1.2",
+    "@giscus/react": "^3.1.0",
+    "@next/eslint-plugin-next": "^15.1.3",
     "@svgr/webpack": "^8.1.0",
-    "@types/react": "^19.0.1",
-    "@vanilla-extract/css": "^1.16.1",
-    "@vanilla-extract/next-plugin": "^2.4.7",
-    "@vanilla-extract/webpack-plugin": "^2.3.15",
+    "@types/react": "^19.0.2",
+    "@vanilla-extract/css": "^1.17.0",
+    "@vanilla-extract/next-plugin": "^2.4.8",
+    "@vanilla-extract/webpack-plugin": "^2.3.16",
     "@watasuke.net/common": "^0.0.0",
     "@watasuke.net/config": "^0.0.0",
     "feed": "^4.2.2",
-    "framer-motion": "^11.14.4",
-    "graphql": "^16.9.0",
+    "framer-motion": "^11.15.0",
+    "graphql": "^16.10.0",
     "graphql-request": "7.1.2",
-    "next": "^15.1.0",
+    "next": "^15.1.3",
     "open-graph-scraper": "^6.8.3",
     "react": "^19.0.0",
     "react-markdown": "^9.0.1",
