--- a/main/package.json
+++ b/main/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@giscus/react": "^3.1.0",
     "@next/eslint-plugin-next": "^15.1.3",
+    "@next/third-parties": "^15.1.3",
     "@svgr/webpack": "^8.1.0",
     "@types/react": "^19.0.2",
     "@vanilla-extract/css": "^1.17.0",
