--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,9 @@ name: build
 
 on:
   push:
-    branches: ['main', 'dev']
+    branches-ignore: ['main']
+    paths-ignore:
+      - 'editor/**'
 
 jobs:
   build:
