--- a/editor/package.json
+++ b/editor/package.json
@@ -12,6 +12,7 @@
     "build-sb": "storybook build"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -28,6 +29,7 @@
     "axios": "^1.8.4",
     "graphql-request": "7.1.2",
     "graphql-tag": "^2.12.6",
+    "monaco-editor": "^0.52.2",
     "next": "15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
