--- a/config/package.json
+++ b/config/package.json
@@ -12,6 +12,7 @@
     "@eslint/js": "^9.26.0",
     "@types/eslint": "^9.6.1",
     "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
