--- a/common/package.json
+++ b/common/package.json
@@ -6,6 +6,7 @@
     "lint": "eslint --fix ."
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-switch": "^1.2.4",
     "@vanilla-extract/css": "^1.17.2",
     "eslint-plugin-header": "^3.1.1",
