--- a/editor/package.json
+++ b/editor/package.json
@@ -5,11 +5,9 @@
   "scripts": {
     "dev": "next dev -p 10211",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 10211",
     "new": "scaffdog generate",
-    "lint": "eslint --fix .",
-    "sb": "storybook dev -p 6006",
-    "build-sb": "storybook build"
+    "lint": "eslint --fix ."
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
@@ -39,19 +37,10 @@
     "use-immer": "^0.11.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-links": "^8.6.14",
-    "@storybook/addon-onboarding": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/nextjs": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/test": "^8.6.14",
     "@vanilla-extract/webpack-plugin": "^2.3.19",
     "css-loader": "^7.1.2",
     "eslint-plugin-header": "^3.1.1",
     "mini-css-extract-plugin": "^2.9.2",
-    "scaffdog": "^4.1.0",
-    "storybook": "^8.6.14"
+    "scaffdog": "^4.1.0"
   }
 }
