--- a/cms/Cargo.toml
+++ b/cms/Cargo.toml
@@ -9,11 +9,16 @@ edition = "2024"
 anyhow = "1.0"
 chrono = "0.4"
 git2 = "0.19"
-juniper = { version = "0.16", features = ["schema-language"] }
-juniper_rocket = "0.9"
-regex = "1.10"
-rocket = "0.5"
-rocket_cors = "0.6"
+juniper = { version = "0.17", features = ["schema-language"] }
+juniper_axum = "0.3"
+axum = { version = "0.8", features = ["http2"] }
+regex = "1.12"
 serde = "1.0"
 toml = "0.8"
 yaml-front-matter = "0.1.0"
+tokio = { version = "1.49.0", features = ["fs", "rt-multi-thread"] }
+tracing-subscriber = "0.3.22"
+tracing = "0.1.44"
+tower-http = { version = "0.6.8", features = ["trace", "cors"] }
+tokio-util = "0.7.18"
+futures-util = "0.3.31"
