--- a/cms/Cargo.toml
+++ b/cms/Cargo.toml
@@ -16,7 +16,7 @@ regex = "1.12"
 serde = "1.0"
 toml = "0.8"
 yaml-front-matter = "0.1.0"
-tokio = { version = "1.49.0", features = ["fs", "rt-multi-thread"] }
+tokio = { version = "1.49.0", features = ["fs", "io-util", "rt-multi-thread"] }
 tracing-subscriber = "0.3.22"
 tracing = "0.1.44"
 tower-http = { version = "0.6.8", features = ["trace", "cors"] }
