--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,11 +22,10 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            **/node_modules
             ~/.ssh
             ~/.cargo
             ~/.rustup
-          key: ${{ hashFiles('~/.rustup/**/*', '**/Cargo.lock', '**/package-lock.json', '.ssh/*') }}
+          key: ${{ hashFiles('~/.rustup/**/*', '**/Cargo.lock', '.ssh/*') }}
 
       - name: Ensure rsync
         run: sudo apt-get update && sudo apt-get install -y rsync
