--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -63,7 +63,9 @@ jobs:
       - name: Clone contents repository
         env:
           GIT_SSH_COMMAND: 'ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=yes'
-        run: git clone --depth=1 git@github.com:watasuke102/contents.watasuke.net.git contents
+        run: |
+          git clone --depth=1 git@github.com:watasuke102/contents.watasuke.net.git contents
+          echo ">> Clone finished; hash: $(git -C contents rev-parse HEAD)"
 
       - name: Build cms
         working-directory: cms
