--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
             ~/.ssh
             ~/.cargo
             ~/.rustup
-          key: ${{ hashFiles('**/package-lock.json', ~/.rustup/**/*', '**/Cargo.lock', '.ssh/*') }}
+          key: ${{ hashFiles('**/package-lock.json', '~/.rustup/**/*', '**/Cargo.lock', '.ssh/*') }}
 
       - name: Ensure rsync
         run: sudo apt-get update && sudo apt-get install -y rsync
